# aegis

./: .gitignore  README.md  SKILLS.md  render.yaml  video.md
.cursor/rules/: dailyspend.mdc
core/: .env.example  .gitignore  DEEP_DIVE.md  GET_PROGRAM_ID.md  README.md  SECURITY.md  SKILLS.md  package-lock.json  package.json  tsconfig.json
core/src/: api.ts  cli.ts  index.ts  logger.ts  scheduler.ts  spl-mint.ts  test-program-client.ts
core/src/agents/: base.ts  config.ts  conservative.ts  defi-trader.ts  index.ts  intents.ts  liquidity.ts  trader.ts
core/src/execution/: index.ts  policy.ts
core/src/keystore/: cipher.ts  index.ts
core/src/llm/: groq.ts  mock.ts  openai.ts  prompt.ts  provider.ts  schema.ts
core/src/memory/: store.ts
core/src/wallet-factory/: index.ts  metadata.ts
core/test-program/: Anchor.toml
core/test-program/programs/aegis_test/: Cargo.toml
core/test-program/programs/aegis_test/src/: lib.rs
node/: .env.example  .gitignore  package-lock.json  package.json  render.yaml
node/src/: auth.ts  db.ts  rpc.ts  server.ts
node/src/agents/: create.ts  fetch.ts
node/src/audit/: trail.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  intents.ts  types.ts
web/: .env.example  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActivityChart.tsx  AgentCard.tsx  AuditLogView.tsx  ConnectionSwitcher.tsx  DecisionFeed.tsx  NodeAgentCard.tsx  PendingApprovals.tsx  Sidebar.tsx  StatCard.tsx
web/lib/: api.ts  config.ts  types.ts  utils.ts
(+32 files in other folders)
