[package]
name = "aegis_test"
version = "0.1.0"
description = "minimal test program for aegis agent interaction"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aegis_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
